Add partial to create fighter skills

--- a/app/views/fighters/new.html.slim
+++ b/app/views/fighters/new.html.slim
@@ -2,4 +2,11 @@
   = f.input :first_name
   = f.input :last_name
   = f.input :description
+
+  h3 Skills
+  #skills
+    = f.simple_fields_for :skills do |skill|
+      = render 'skill_fields', f: skill
+    .links
+      = link_to_add_association 'add skill', f, :skills
   = f.button :submit
