--- a/app/views/fighters/index.html.slim
+++ b/app/views/fighters/index.html.slim
@@ -1,3 +1,15 @@
 - if fighters.any?
   - fighters.each do |fighter|
-    = link_to fighter.name, fighter_path(fighter)
+    .panel.panel-default
+      .panel-body
+        .row
+          .col-md-4.text-center
+          /! Avatar placeholder
+          .col-md-8
+            .row
+              .col-md-12
+                h1
+                  = link_to fighter.name, fighter_path(fighter)
+            .row
+              .col-md-6
+                = fighter.description
