--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -11,3 +11,5 @@ nav.navbar.navbar-default.navbar-static-top role="navigation"
       ul.nav.navbar-nav
         li
           = link_to 'figters', fighters_path
+        li
+          = link_to 'fights', fights_path
