--- a/app/views/fights/index.html.slim
+++ b/app/views/fights/index.html.slim
@@ -3,6 +3,11 @@
     .panel.panel-default
       .panel-body
         .row
-          .col-md-12.text-center
-            - fight.fighters.each do |fighter|
-              = fighter.decorate.name
+          .col-md-12
+            .row
+              .col-md-6
+                h1 Winner
+                = fight.winner.decorate.name
+              .col-md-6
+                h1 Losser
+                = fight.losser.decorate.name
