--- a/app/views/fights/show.html.slim
+++ b/app/views/fights/show.html.slim
@@ -1,3 +1,5 @@
-- if fighters.any?
-  - fighters.each do |fighter|
-    = fighter.name
+- if winner
+  = winner.first_name
+
+- if losser
+  = losser.first_name
