--- a/app/views/fights/new.html.slim
+++ b/app/views/fights/new.html.slim
@@ -1,4 +1,4 @@
 = simple_form_for fight do |f|
-  = f.association :fighters
-  = f.association :fighters
+  = f.association :fighters, collection: fighters_collection
+  = f.association :fighters, collection: fighters_collection
   = f.button :submit
